--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera PWA</title>
 
-    <base href="/PWA-ejemplo/">
+    <base href="./">
 
     <!--vincular el manifest -->
     <link rel="manifest" href="manifest.json">
@@ -19,15 +19,15 @@
     <P>Se puede instalar como aplicacion en tu celular</P>
     <button onclick="alert('Hola desde la PWA')">Click aqui</button>
 
-    <!-- <ul>
-        <li><a href="pwa-ejemplo/index.html">Inicio</a></li>
-        <li><a href="pwa-ejemplo/login.html">Iniciar Sesión</a></li>
-    </ul> -->
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="login.html">Iniciar  Sesion</a></li>
+    </ul>
 
     <!-- Registrat el service worker -->
     <script>
         if("ServiceWorker" in navigator){
-            navigator.serviceWorker.register('/PWA-ejemplo/sw.js')
+            navigator.serviceWorker.register('/pwa-ejemplo./sw.js')
                 .then(reg => console.log("Service Worker registrado"))
                 .catch(err => console.log("Error al registrar el Service Worker"));
         }
