--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Registrat el service worker -->
     <script>
         if("ServiceWorker" in navigator){
-            navigator.serviceWorker.register('/pwa-ejemplo./sw.js')
+            navigator.serviceWorker.register('/PWA-ejemplo./sw.js')
                 .then(reg => console.log("Service Worker registrado"))
                 .catch(err => console.log("Error al registrar el Service Worker"));
         }
